<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_blogs"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/nav_blogs" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_poll_black_24dp"
            android:title="@string/nav_calculator" />

        <item
            android:id="@+id/nav_portfolio"
            android:icon="@drawable/ic_person_outline_black_24dp"
            android:title="@string/nav_portfolio" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_bubble_chart_black_24dp"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_call_black_24dp"
                android:title="@string/nav_contact_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:icon="@drawable/ic_priority_high_black_24dp"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>